--- a/Ingleby/19-09-05.md
+++ b/Ingleby/19-09-05.md
@@ -1,1 +1,11 @@
-
+## 첫번째 회의
+### 멤버 구성은 로맨틱, 성공적
+ 프론트엔드, 백엔드, IOS 각 2명씩 총 6명의 팀원이 모였다. 팀원 구성은 이상적이라고 생각한다. 유기적으로 관계 설정이 가능한 구성이다. 컴포넌트별로 혹은 역할별로 하위 팀 구성이 가능하고 각 역할별로 서로 토의 및 협의의 경험을 할 수 있는 구성이다.
+ 
+### 아이템 선정을 위한 아이디어 모으기
+  계획은 오늘, 내일 양일 중에 프로젝트 아이템을 선정하는 것이었다. 9개의 다양한 후보 아이템이 나왔다. 일단은 형식없이 토의를 했는데 지금 생각해보니 살짝 아쉬움이 남는다. 각 후보 아이템 모두 가능성이 많은 좋은 아이템들이었는데 형식 없이 토의를 하다보니 각각의 아이템에 대해 충분히 고민할 시간이 없었던 것 같다. 각자 꽂힌 아이템에 대해서 고민했을 것이기 때문에 의견이 분산된 느낌을 받는다. 아이템들을 흩어놓고 토의를 하는 것보다는 하나씩 순서대로 함께 집중하고 고민하고 평가했으면 혹시 놓쳤을 부분이 많이 줄어들지 않았을까 생각해본다.
+  
+### 아이템 선정의 기준
+ 프로젝트를 진행하기 좋은 아이템은 무엇일까. 
+ 첫번째는 실현 가능성일 것이다. 소위 얼추 각이 나오는가 아닌가이다. 하지만 생각보다 이 부분은 판단하기가 수월하지 않다. 특히 이 '각'을 내는 감각은 경험이 많이 필요한 부분이고 그래서 생애 첫 프로젝트를 시작하려는 우리에겐 가장 어려운 부분인듯 하다. 그래서 빠르게 프로토타입을 만들어보는 것이 괜찮은 선택인 것 같다. 아이템이 선정되면 빠르게 프로토타입을 만들어봐서 '각'을 내보기로 했다. 왜냐면 우린 후보 아이템이 많으니까. 
+ 실현 가능성에 대해 의외로 많이 고려된 부분이 초기 데이터 확보가 가능한가 였다. 예를 들자면, 여러가지 추천 서비스 아이디어도 나왔는데 초기 데이터를 모으기가 쉽지 않을 것 같다는 의견이 많았다.
