--- a/Allen/190907.고민끄적.md
+++ b/Allen/190907.고민끄적.md
@@ -48,10 +48,12 @@
 
 ## 서비스를 좀 더 구체화해보자
 - 거꾸로 만들어가는건 어떨까? 답변부터 출발해서 질문 만들기?
-- 큐레이터에서 제시할 수 있는 예시
+- 큐레이터가 제시할 수 있는 예시(요런 느낌이려나?)
   - 근처 탐탐에서 조용히 책읽는건 어때? 스벅보다 조용하고 좋아! >ㅁ<
   - 삼청동 루프탑에서 병맥 한잔 어때? 별빛처럼 반짝이는 경복궁 뷰 보면서 시원한 바람에 스트레스 다 날려버리자!
-  - 대학로 비틀즈바에서 라프로익 한잔 할래? 요기 진공관 스피커가 끝내주거든~ 귀호강하면서 바텐더랑 수다떨고 오자!
+  - 오늘 많이 힘들었지? 같이 '굿윌헌팅' 보지 않을래? 괜찮아, 누가 뭐래도 넌 정말 소중한 사람인걸.
+  - 대학로 비틀즈바에서 라프로익 한잔 할래? 요기 진공관 스피커가 끝내주거든~ 심장이 두근거리는 진동을 느껴보지 않을래?
+  - 안되겠어! 화끈한게 필요해! 마라탕 먹으러가자! 건대로 GOGO!
   - 코노에서 가슴 뻥 뚫리게 한곡 지르고 오자!
   - 친구들이랑 배그하러 가자! 오늘은 치킨이닭!
 - 제시할 수 있는 '활동'은 뭐가 있지?
