--- a/Allen/190907.고민끄적.md
+++ b/Allen/190907.고민끄적.md
@@ -45,6 +45,7 @@
 > - '감정기반'이라면 '현재 느끼는 감정'에 집중해야 할 것 같다
 > - '내일 약속 장소를 추천받고 싶다'에는 대답할 수 없는 서비스. 단순한 추천 서비스가 아님
 > - '지금 내 기분이 이런데 (지금 당장/이따 저녁에) 이 기분을 (만끽/전환)하고 싶다' 정도에 대답하는 서비스?
+> - 좀 생각해봤는데 이건 더 고민해봐야할 것 같아. '오늘 기분이 별론데 주말에 뭔가 하고 싶은 사람'은 어떡하지? 버려?
 
 ## 서비스를 좀 더 구체화해보자
 - 거꾸로 만들어가는건 어떨까? 답변부터 출발해서 질문 만들기?
@@ -62,6 +63,14 @@
   - 영화, 연극, 박물관구경, 미술관구경, 쇼핑, 게임, 오락실, 등산, 조깅, 아쿠아리움 구경, 실내암벽, 원데이클래스, 명상
   - 영화, 연극, 전시회 이런건 추천하려면 최신 데이터가 또 있어야겠네. 그냥 '영화보러 갈래?' 할 수는 없잖..
   - 슬픈 영화 보면서 펑펑 울기 요정도는 가능하려나? 아니면 넷플릭스로 '어떤 영화' 보기 정도?
+- 어떤 질문을 던지든, 대상이 어떤 감정이든 어쨌든 우리가 제시할 수 있는 '장소와 활동'으로 연결해주어야 함
+- 일단 제시할 수 있는 결과를 긍정적/부정적 감정일 때의 결과 2가지로 나눠보자
+- 근데 애매한 활동들이 있는 것 같다. 노래부르기라든지..
+
+## 단순하게
+### 기분 좋을 때 할 만한 활동
+- 신나는 노래부르기, 클럽가서 춤추기, ..
+
 
 ## 아무거나 타닥타닥
 - 회의 진행 호흡이 좀 빠른 것 같아..
@@ -71,3 +80,21 @@
   - 그냥 내가 이해력이 달리나?
   - 근데 결정을 해야하긴 하니까 어쩔 수 없는 부분도 있는 것 같아
   - 미셸 추진력 짱짱인듯
+- 아무 질문이나 적어보자
+  - 지금 어떤 음악이 듣고 싶어?(발라드, 댄스, 락, etc..)
+  - 지금 너 기분에 가까운 그림은 어떤거야?
+  - 갤럭시가 좋아? 아이폰이 좋아?
+  - 얼죽아? 뜨죽따?
+  - 부먹? 찍먹?
+  - 마라탕이 먹고 싶어? 스테이크가 먹고 싶어?
+  - 지금 너 표정은 어때? 😭 or 😆
+  - 여행 간다면 어디가 좋아? 조용하고 여유로운 하와이? 복작복작 삐까뻔쩍한 맨해튼?
+- 근데말야.. 몇가지 질문으로 감정을 파악하는게 가능은 한걸까? 직접적으로 묻지 않으면서?
+  - (대화를 이어가는 질문) + (감정을 묻는 질문) 의 형식이어야만 가능하지 않을까? (무슨 일 있어? 우울한거야?)
+  - 직접적으로 묻지 않으면서 감정(혹은 취향?)을 드러낼 수 있는 질문은 어떤게 있을까?
+- 그리고.. 서비스에 접속하는 사람들은 실제로 다양한 감정을 가지고 접속을 할까?
+  - 에크만의 6가지 기본 감정만 보더라도, 놀람, 공포, 분노, 혐오, 슬픔, 행복이 있는데
+  - 놀란 사람이 서비스를 이용하는 경우는 어떤 경우지?
+  - 공포감, 혐오감을 느낀 사람이 이용하는 경우는?
+  - 오히려 **신남 / 행복 / 만족 / 즐거움 / 우울함 / 지침 / 짜증 / 긴장** 요정도 감정이 더 현실적일지도
+  - 꼭 모든 감정을 다 파악해야할까?
