--- a/Allen/190907.고민끄적.md
+++ b/Allen/190907.고민끄적.md
@@ -45,7 +45,7 @@
 > - '감정기반'이라면 '현재 느끼는 감정'에 집중해야 할 것 같다
 > - '내일 약속 장소를 추천받고 싶다'에는 대답할 수 없는 서비스. 단순한 추천 서비스가 아님
 > - '지금 내 기분이 이런데 (지금 당장/이따 저녁에) 이 기분을 (만끽/전환)하고 싶다' 정도에 대답하는 서비스?
-> - 좀 생각해봤는데 이건 더 고민해봐야할 것 같아. '오늘 기분이 별론데 주말에 뭔가 하고 싶은 사람'은 어떡하지? 버려?
+> - '이번 주말에 이런 활동 어때?'라는 제안도 매력적이지만 일단은 작게 시작하는게 좋을 것 같다
 
 ## 서비스를 좀 더 구체화해보자
 - 거꾸로 만들어가는건 어떨까? 답변부터 출발해서 질문 만들기?
@@ -65,11 +65,12 @@
   - 슬픈 영화 보면서 펑펑 울기 요정도는 가능하려나? 아니면 넷플릭스로 '어떤 영화' 보기 정도?
 - 어떤 질문을 던지든, 대상이 어떤 감정이든 어쨌든 우리가 제시할 수 있는 '장소와 활동'으로 연결해주어야 함
 - 일단 제시할 수 있는 결과를 긍정적/부정적 감정일 때의 결과 2가지로 나눠보자
-- 근데 애매한 활동들이 있는 것 같다. 노래부르기라든지..
+- 근데 애매한 활동들이 좀 있네.. 노래부르기라든지..
 
 ## 단순하게
 ### 기분 좋을 때 할 만한 활동
-- 신나는 노래부르기, 클럽가서 춤추기, ..
+- 신나는 노래부르기, 클럽가서 춤추기..
+- 이건 내일 
 
 
 ## 아무거나 타닥타닥
