--- a/Dominic/20190909 회의.md
+++ b/Dominic/20190909 회의.md
@@ -6,6 +6,8 @@ hangouts 를 활용해 화상 회의를 하였다.
 
 30분 정도만에 컴펙트하게 정해진 주제만 이야기하고 끝났다.
 
+회의시간이 짧고 명확해서 좋았다.
+
 조금 더 구체적이고 조금은 다른 방향의 아이디어가 나왔다.
 
 막막했던 서비스에서 그래도 각이 나오고 예상할 수 있는 상태까지 올 수 있었다.
@@ -16,10 +18,5 @@ hangouts 를 활용해 화상 회의를 하였다.
 
 조금 더 프로젝트에 대해서 생각하고 아이디어를 내야겠다.
 
-저번에 이어서 조금은 유치하고 몰래 일기 쓰는 느낌의 회고를 쓰고 있다는 생각이 든다.
-
-그래도 회의하고 지금의 내 감정과 생각을 적어놓는 다는 것에 의의를 두면 이 또한 괜찮은거 아닐까?
-
-자야지...
 
 회의록 : https://docs.google.com/document/d/1heAwDuZdm4RLxrBxoKfwzBGsMuN7dBMdsv9dj3XQdlY/edit
