--- a/Allen/191002.md
+++ b/Allen/191002.md
@@ -1,6 +1,9 @@
+## 팀 전체 이슈 관리 방법
 슬랙으로 팀 전체가 고민해야할 이슈를 다루다보니 이슈별로 정리되지도 않고 휘발되어버리는 느낌이 들었다.  
 github을 활용해 기록으로 남기자고 제안했다.  
 github organization에 issue탭이 있다면 좋겠지만 그런 기능이 없어서 team의 discussion을 시도해보기로 했다.  
 
-  
-한 사람이 어떤 브랜치로부터 여러 피쳐를 작업할 때 항상 처음 시작한 피쳐로부터 브랜치를 따야할까?
+## 브랜치 전략
+한 사람이 어떤 브랜치로부터 여러 피쳐를 작업할 때 항상 처음 시작한 피쳐로부터 브랜치를 따야할까?  
+컴포넌트 별로 작업하기 때문에 이전 결과물이 없어도 되긴 하니까 처음 피쳐부터 브랜치를 따도 될 것 같긴 하다.  
+단지 이전에 작업한 내용 없이 작업하는 것이 어색해서..  
